[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/ui/themes/menu_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/home-bg.png" type="Texture" id=2]
[ext_resource path="res://scripts/ui/login_menu.gd" type="Script" id=3]
[ext_resource path="res://scripts/translations/translated_button.gd" type="Script" id=4]
[ext_resource path="res://scripts/translations/translated_label.gd" type="Script" id=5]
[ext_resource path="res://assets/fonts/Roboto/title.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/logo_ender_blanc.png" type="Texture" id=7]

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
username_field_path = NodePath("MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/UsernameField")
password_field_path = NodePath("MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/PasswordField")
connect_button_path = NodePath("MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/Login")
error_popup_path = NodePath("ErrorPopup")
error_label_path = NodePath("ErrorPopup/Panel/MarginContainer/VBoxContainer/ErrorMessageLabel")

[node name="BackgroundColor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.137255, 0.129412, 0.172549, 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 7

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 60
custom_constants/margin_left = 20
custom_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 60.0
margin_right = 1900.0
margin_bottom = 1020.0
custom_constants/separation = 25

[node name="Logo" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 1880.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 626.0
margin_top = 175.0
margin_right = 1254.0
margin_bottom = 960.0
rect_min_size = Vector2( 300, 300 )
size_flags_horizontal = 4
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 253.0
margin_right = 628.0
margin_bottom = 291.0
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 267.0
margin_right = 360.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 6 )
text = "LOGIN"
align = 1
valign = 1
uppercase = true
script = ExtResource( 5 )

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 311.0
margin_right = 628.0
margin_bottom = 531.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 300.0
margin_bottom = 220.0
rect_min_size = Vector2( 300, 0 )

[node name="UsernameLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_right = 300.0
margin_bottom = 22.0
text = "USERNAME"
script = ExtResource( 5 )

[node name="UsernameField" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 26.0
margin_right = 300.0
margin_bottom = 76.0
rect_min_size = Vector2( 0, 50 )

[node name="PasswordLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 80.0
margin_right = 300.0
margin_bottom = 102.0
text = "PASSWORD"
script = ExtResource( 5 )

[node name="PasswordField" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 106.0
margin_right = 300.0
margin_bottom = 156.0
rect_min_size = Vector2( 0, 50 )
secret = true
caret_blink = true

[node name="Login" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 160.0
margin_right = 300.0
margin_bottom = 220.0
rect_min_size = Vector2( 300, 60 )
size_flags_horizontal = 4
text = "LOGIN"
script = ExtResource( 4 )
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 304.0
margin_right = 324.0
margin_bottom = 220.0
rect_min_size = Vector2( 20, 0 )

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 328.0
margin_right = 628.0
margin_bottom = 220.0
alignment = 2

[node name="CreateAccount" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_top = 96.0
margin_right = 300.0
margin_bottom = 156.0
rect_min_size = Vector2( 300, 60 )
size_flags_horizontal = 4
text = "CREATE_ACCOUNT"
script = ExtResource( 4 )
uppercase = true

[node name="ContinueWithoutLogin2" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_top = 160.0
margin_right = 300.0
margin_bottom = 220.0
rect_min_size = Vector2( 300, 60 )
size_flags_horizontal = 4
text = "CONTINUE_WITHOUT_LOGIN"
script = ExtResource( 4 )
uppercase = true

[node name="ErrorPopup" type="Popup" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="ColorRect" parent="ErrorPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.5 )

[node name="Panel" type="Panel" parent="ErrorPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -100.0
margin_right = 150.0
margin_bottom = 172.0
rect_min_size = Vector2( 250, 0 )

[node name="MarginContainer" type="MarginContainer" parent="ErrorPopup/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ErrorPopup/Panel/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 290.0
margin_bottom = 262.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="ErrorPopup/Panel/MarginContainer/VBoxContainer"]
margin_right = 280.0
margin_bottom = 22.0
text = "ERROR_OCCURED"
align = 1
valign = 1
script = ExtResource( 5 )

[node name="ErrorMessageLabel" type="Label" parent="ErrorPopup/Panel/MarginContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 280.0
margin_bottom = 202.0
size_flags_vertical = 7
autowrap = true

[node name="ErrorOk" type="Button" parent="ErrorPopup/Panel/MarginContainer/VBoxContainer"]
margin_top = 212.0
margin_right = 280.0
margin_bottom = 252.0
rect_min_size = Vector2( 40, 40 )
text = "OK"

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/Login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/CreateAccount" to="." method="_on_CreateAccount_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/ContinueWithoutLogin2" to="." method="_on_continue_without_login_pressed"]
[connection signal="pressed" from="ErrorPopup/Panel/MarginContainer/VBoxContainer/ErrorOk" to="." method="_on_ok_pressed"]
